--- a/style.css
+++ b/style.css
@@ -111,6 +111,9 @@ body {
     width: 250px;
     height: 40px;
     border-radius: 30px;
+    position:absolute;
+    right: 115%;
+    bottom: 10%;
 }
 .bcL a {
     position:relative;
@@ -122,6 +125,9 @@ body {
     height: 40px;
     border-radius: 30px;
     opacity: .8;
+    position: absolute;
+    right: 60%;
+    bottom: 10%;
 }
 .bcR a {
     position:relative;
